--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@types/node": "^20.2.5",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "aos": "^3.0.0-beta.6",
-    "next": "^13.4.4",
+    "@vercel/node": "^3.0.11",
+    "aos": "^2.3.4",
+    "next": "^14.0.4",
     "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
